// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VInput.js should apply theme to label, counter, messages and icons 1`] = `

<div class="v-input theme--light">
  <div class="v-input__prepend-outer">
    <div class="v-input__icon v-input__icon--prepend">
      <i aria-hidden="true"
         class="v-icon theme--light material-icons"
      >
        prepend
      </i>
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__slot">
      <label aria-hidden="true"
             class="v-label theme--light"
             style="left: 0px; position: relative;"
      >
        foo
      </label>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
        <div class="v-messages__message">
          bar
        </div>
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div class="v-input__icon v-input__icon--append">
      <i aria-hidden="true"
         class="v-icon theme--light material-icons"
      >
        append
      </i>
    </div>
  </div>
</div>

`;

exports[`VInput.js should be in an error state 1`] = `

<div class="v-input v-input--has-state error--text">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages error--text">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should be in an error state 2`] = `

<div class="v-input v-input--has-state error--text">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages error--text">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate an icon and match snapshot 1`] = `

<div class="v-input">
  <div class="v-input__prepend-outer">
    <div class="v-input__icon v-input__icon--prepend">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        list
      </i>
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate an icon and match snapshot 2`] = `

<div class="v-input">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div class="v-input__icon v-input__icon--append">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        list
      </i>
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate append and prepend slots 1`] = `

<div class="v-input">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div>
      append
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate append and prepend slots 2`] = `

<div class="v-input">
  <div class="v-input__prepend-outer">
    <div>
      prepend
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should not generate input details 1`] = `

<div class="v-input v-input--hide-details">
  <div class="v-input__control">
    <div class="v-input__slot">
    </div>
  </div>
</div>

`;

exports[`VInput.js should render a label 1`] = `

<div class="v-input">
  <div class="v-input__control">
    <div class="v-input__slot">
      <label aria-hidden="true"
             class="v-label"
             style="left: 0px; position: relative;"
      >
        foo
      </label>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should render a label 2`] = `

<div class="v-input">
  <div class="v-input__control">
    <div class="v-input__slot">
      <label aria-hidden="true"
             class="v-label"
             style="left: 0px; position: relative;"
      >
        <div>
          foo
        </div>
      </label>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;
